--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,8 @@
+<!--
+MIT License
+Copyright (c) 2025 github.com/paul356
+See LICENSE file for full license text
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
